--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>clase-github</title>
 </head>
 
 <body>
     <h1>Mi primer repo de github</h1>
-    <h2>Va mi primer commit</h2>
+    <h2>Va mi primer commit
+
+    </h2>
 
 </body>
 
