--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 
 <body>
-    <h1>Mi primer repo de github</h1>
-    <h2>Va mi primer commit
-
-    </h2>
+    <div class="container">
+        <h1>Mi primer repo de github</h1>
+        <h2>Va mi primer commit</h2>
+    </div>
 
 </body>
 
